--- a/css/main.css
+++ b/css/main.css
@@ -6,15 +6,13 @@
 
 /* Div hotel Reserva */
 .card-hotel {
-    flex: 1 150px;
-    padding: 2px 5px 2px 5px;
+    flex: 1 200px;
     margin-top: 10px;
 
 }
 .btn-reserva {
     width: 100%;
-    position: relative;
-    bottom: 0;
+    border-radius: 0;
 }
 
 footer {
