--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 
 img{
     height: 50px;
-
+    width: 50px;
 }
 
 /* Div hotel Reserva */
@@ -29,4 +29,8 @@ footer {
 
 .footer-address-icon {
     padding: 0 7px 0 0;
+}
+
+.tab-content {
+    padding-top: 10px;
 }
