se agrego varias dependencias

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .jumbotron {
-  background-color: #fffa19;
+  background-color: #addfff;
   color: black;
   margin-top: 50px;
   margin-bottom: 0px;
@@ -24,7 +24,7 @@ img {
 
 footer {
   padding: 10px 10px 0 10px;
-  background-color: #fffa19;
+  background-color: #addfff;
   margin-top: 10px;
   margin-bottom: 0px;
 }
